# gyandex

./: .env.example  .gitignore  .pre-commit-config.yaml  CLA.md  COMMERCIAL-LICENSE.md  LICENSE  README.md  conftest.py  justfile  main.ipynb  publish.ipynb  pyproject.toml  reading-list.yaml
.github/workflows/: ci.yml
gyandex/cli/: genpod.py  podgen.py  podgen_test.py
gyandex/llms/: factory.py  factory_test.py
gyandex/loaders/: factory.py  factory_test.py  types.py  youtube.py
gyandex/podcast/: feed.py  feed_test.py  models.py  models_test.py  publish.py  publish_test.py  storage_test.py
gyandex/podgen/config/: loader.py  loader_test.py  schema.py
gyandex/podgen/engine/: publisher.py  publisher_test.py  synthesizer.py  synthesizer_test.py  test_fixtures.py  workflows.py
gyandex/podgen/feed/: generator.py  generator_test.py  models.py  models_test.py  test_fixtures.py
gyandex/podgen/speech/: base.py  base_test.py  factory.py  factory_test.py  google_cloud.py  google_cloud_test.py  openai.py  openai_test.py  zyphra.py  zyphra_test.py
gyandex/podgen/storage/: factory.py  factory_test.py  s3.py  s3_test.py  test_fixtures.py
gyandex/podgen/workflows/: alexandria.py  factory.py  factory_test.py  types.py
samples/: README.md  website-to-podcast.yaml  youtube-to-podcast.yaml
scripts/: test_tts.py
